--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,32 +2,66 @@
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+@font-face {
+    font-family: "LibreFranklin-R";
+    src: url("../fonts/LibreFranklin-Regular.otf") format("woff");
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+@font-face {
+    font-family: "LibreFranklin-M";
+    src: url("../fonts/LibreFranklin-Medium.otf") format("woff");
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+@font-face {
+    font-family: "LibreFranklin-SB";
+    src: url("../fonts/LibreFranklin-SemiBold.otf") format("woff");
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+@font-face {
+    font-family: "LibreFranklin-B";
+    src: url("../fonts/LibreFranklin-Bold.otf") format("woff");
 }
+
+@font-face {
+    font-family: "LibreFranklin-EB";
+    src: url("../fonts/LibreFranklin-ExtraBold.otf") format("woff");
+}
+
+@font-face {
+    font-family: "LibreFranklin-L";
+    src: url("../fonts/LibreFranklin-Light.otf") format("woff");
+}
+
+@font-face {
+    font-family: "LibreFranklin-T";
+    src: url("../fonts/LibreFranklin-Thin.otf") format("woff");
+}
+
+.c-shadow {
+    box-shadow: rgb(255, 255, 255) 4px 4px 0px -3px, #87d6f6 4px 4px
+}
+
+/*:root {*/
+/*  --foreground-rgb: 0, 0, 0;*/
+/*  --background-start-rgb: 214, 219, 220;*/
+/*  --background-end-rgb: 255, 255, 255;*/
+/*}*/
+
+/*@media (prefers-color-scheme: dark) {*/
+/*  :root {*/
+/*    --foreground-rgb: 255, 255, 255;*/
+/*    --background-start-rgb: 0, 0, 0;*/
+/*    --background-end-rgb: 0, 0, 0;*/
+/*  }*/
+/*}*/
+
+/*body {*/
+/*  background: linear-gradient(*/
+/*      to bottom,*/
+/*      transparent,*/
+/*      rgb(var(--background-end-rgb))*/
+/*    )*/
+/*    rgb(var(--background-start-rgb));*/
+/*}*/
+
+
