--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -45,6 +45,24 @@
 box-shadow: rgba(16, 24, 40, 0.1) 0px 1px 3px, rgba(16, 24, 40, 0.06) 0px 1px 2px;
 }
 
+::-webkit-scrollbar {
+    height: 4px;
+    -webkit-transition: .45s;
+    transition: .45s;
+    width: 16px
+}
+
+::-webkit-scrollbar-thumb {
+    background: #e5e3e5;
+    background-clip: padding-box;
+    border: 4px solid #0000;
+    border-radius: 8px;
+    width: 16px;
+}
+::-webkit-scrollbar-track {
+    background: #0000;
+}
+
 /*:root {*/
 /*  --foreground-rgb: 0, 0, 0;*/
 /*  --background-start-rgb: 214, 219, 220;*/
